# claude-agent-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  backend-capability-matrix.md  claude-code-backend.md  codex-setup.md  deployment.md  downstream-tool-policy.md  execution-backends.md  federation.md  implementation-plan.md  operational-rules.md  operator-guide.md  release-validation.md  tool-contracts.md  transports.md  troubleshooting.md  upgrade-guide-v1.0.md  v0.2-deployment-track-architecture-spec.md  v0.3-federation-track-architecture-spec.md  v0.4-execution-backend-architecture-spec.md  v0.5-claude-code-stabilization-architecture-spec.md  v0.6-claude-code-capability-expansion-architecture-spec.md  v0.7.0-architecture-spec--claude-code-session-continuity.md  v0.8.0-architecture-spec-claude-code-execution-mediation.md  v0.9.0-architecture-spec-claude-code-mediation-hardening-and-bounded-workflow-expansion.md  v1.0.0-architecture-spec-claude-code-stabilization-operator-ux-and-production-hardening.md  v1.1.0-architecture-spec--apntalk-restricted-verification-mode.md  v1.1.1-architecture-addendum-verification-ux-and-reason-taxonomy.md  v1.1.2-architecture-addendum-dependability.md
memory/: project_v112_state.md
tests/: conftest.py  test_backends.py  test_claude_code_tool_forwarding.py  test_cli.py  test_federation_invocation.py  test_federation_registry.py  test_federation_visibility.py  test_runtime.py  test_server.py  test_sessions.py  test_tools.py  test_transports.py  test_v07_continuation.py  (+7 more)
(+43 files in other folders)
